Layout Issue Fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/app.scss
@@ -445,7 +445,6 @@ header {
         input {
             @include border-radius(0px);
 
-            width: 380px;
             height: 100%;
             font-size: 14px;
             padding: 0 10px;
